[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown2pdf-python"
version = "0.1.0"
description = "Convert Markdown to PDF with L402 Lightning support, brought to you by markdown2pdf.ai"
authors = [{name = "Serendipity AI"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["requests"]

[project.urls]
Homepage = "https://markdown2pdf.ai"
Documentation = "https://markdown2pdf.ai"
Repository = "https://github.com/Serendipity-AI/markdown2pdf-python"